# poetry_bucket_project

./: .env  .gitignore  README.md  auth.py  main.py  my_args.py  pyproject.toml  replit_zip_error_log.txt
bucket/: crud.py
object/: crud.py  versioning.py
static/: important.txt
