[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["natiatabatadze <natiaa.tabatadze@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
